add: async plugins loader